--- a/index.html
+++ b/index.html
@@ -4,39 +4,35 @@
     <head>
         <title>AleeshaNaxakis.com</title>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" type="text/css" href="./assets/style.css"
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="./assets/style.css">
     </head>
 
     <body>
         <header>
             <div class="header">
-             <h1>Aleesha Naxakis</h1>     
-                <ul>
-                    <li>
-                        <a href="">About</a>
-                    </li>
-                    <li>
-                        <a href="">Work</a>
-                    </li>
-                    <li>
-                        <a href="">Connect</a>
-                    </li>
-                </ul>
-            </div>
-        </header>
+             <h1>Aleesha Naxakis</h1>  
+             <p> 
+                Brand | Communications | Web Development
+             </p>
+             <img src="./assets/images/Aleesha-Naxakis-headshot.png" alt="Aleesha Naxakis headshot"/>
+        </header>           
+
+        <nav>
+            <a href="#about-me">About</a>
+            <a href="#my-work">Work</a>
+            <a href="#connect-with-me">Connect</a>
+        </nav>
 
     <main>
-    <section>
-        <div class="hero">
-            <img alt="Aleesha Naxakis portrait"/>
-        </div>
-    </section>
-
     <section class="about">
         <div id="about-me" class="about-me">
             <h2>About Me</h2>
             <p>
-                Aleesha Naxakis is a communications professional
+                I am a communications professional with over six years' experience.  B2C, B2B, internal, and government relations. In 2023 I completed University of Sydney's Coding Boot Camp in collaboration with edX and have since developed a proven track record of architecting, developing, and implementing interactive websites. 
+            </p>
+            <p>
+                By combining my skills in communication and web development, I am able to provide businesses with . Adept at leveraging SEO strategies and user-centered design principles to engage users and grow web traffic 
             </p>
         </div>
     </section>
@@ -44,11 +40,20 @@
     <section class="work">
             <div id="my-work" class="my-work">
                 <h2>My Work</h2>
+                    <section class="horiseon-website">
+                        <h3>Horiseon Brand Website</h3>
+                        <img src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table">
+                    </section>
+                    <section class="css-cheatsheet">
+                        <h3>CSS Snippet Cheatsheet</h3>
+                        <img src="./assets/images/CSS-cheatsheet.png" alt="cheatsheet displaying CSS syntax for flexbox, grid, and more">
+                    </section>
             </div>
     </section>
 
     <section class="connect">
         <div id="connect-with-me" class="connect-with-me">
+                <h2>Connect with Me</h2>
             <ul>
                 <li>Email: aleesha-@hotmail.com</li>
                 <li>Phone: 0403 721 428</li>
@@ -63,5 +68,5 @@
     </footer>
 
     </body>
-    
+
 </html>
