--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
              <p> 
                 Brand | Communications | Web Development
              </p>
+             <div class="img">
              <img src="./assets/images/Aleesha-Naxakis-headshot.png" alt="Aleesha Naxakis headshot"/>
+            </div>
         </header>           
 
         <nav>
-            <a href="#about-me">About</a>
-            <a href="#my-work">Work</a>
-            <a href="#connect-with-me">Connect</a>
+            <div class="nav">
+                <a href="#about-me">About</a>
+                <a href="#my-work">Work</a>
+                <a href="#connect-with-me">Connect</a>
+            </div>
         </nav>
 
     <main>
@@ -42,7 +46,11 @@
                 <h2>My Work</h2>
                     <section class="horiseon-website">
                         <h3>Horiseon Brand Website</h3>
+                        <a href="https://aleeshanaxakis.github.io/Module-1-Challenge/#search-engine-optimization">
+                        <div class="horiseon-img">
                         <img src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table">
+                        </div>
+                        </a>
                     </section>
                     <section class="css-cheatsheet">
                         <h3>CSS Snippet Cheatsheet</h3>
