--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <body>
         <header>
             <div class="header">
-             <h1>Aleesha Naxakis</h1>  
+             <h1>Aleesha Naxakis</h1>
+             <div class="brand">  
              <p> 
                 Brand | Communications | Web Development
              </p>
+            </div>
              <div class="img">
              <img src="./assets/images/Aleesha-Naxakis-headshot.png" alt="Aleesha Naxakis headshot"/>
             </div>
