trying to resize Horiseon img

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <section class="horiseon-website">
                         <h3>Horiseon Brand Website</h3>
                         <a href="https://aleeshanaxakis.github.io/Module-1-Challenge/#search-engine-optimization">
-                        <div class="horiseon-img">
+                        <div id="horiseon-img">
                         <img src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table">
                         </div>
                         </a>
