--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
                     <section class="horiseon-website">
                         <h3>Horiseon Brand Website</h3>
                         <a href="https://aleeshanaxakis.github.io/Module-1-Challenge/#search-engine-optimization">
-                        <div id="horiseon-img">
-                        <img src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table">
-                        </div>
+                        <img id="horiseon-img" src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table">
                         </a>
                     </section>
                     <section class="css-cheatsheet">
