--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     <section class="horiseon-website">
                         <h3>Horiseon Brand Website</h3>
                         <a href="https://aleeshanaxakis.github.io/Module-1-Challenge/#search-engine-optimization">
-                        <img id="horiseon-img" src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table">
+                        <div>
+                        <img  src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table" id="horiseon-img">
+                        </div>    
                         </a>
                     </section>
                     <section class="css-cheatsheet">
