--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h3>My Work</h3>
                     <section class="horiseon-website">
                         <h4>Horiseon Brand Website</h4>
-                        <a href="https://aleeshanaxakis.github.io/Module-1-Challenge/#search-engine-optimization">
+                        <a href="https://aleeshanaxakis.github.io/Module-1-Challenge">
                         <img  src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table" id="horiseon-image">
                         </a>
                     </section>
