added musclemate to portfolio

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                         <img  src="./assets/images/digital-marketing-meeting.jpg" alt="four people having a meeting at a boardroom table" id="horiseon-image">
                         </a>
                     </section>
+                    <section class="muscle-mate">
+                        <h4>MuscleMate</h4>
+                        <a href="https://mitchmcnaughton.github.io/muscle-mate/">
+                            <img src="./assets/images/MuscleMate.png" alt="landing page of a website called musclemate" id="muscle-mate-image">
+                        </a>
+                    </section>
                     <section class="css-cheatsheet">
                         <h4>CSS Snippet Cheatsheet</h4>
                         <img src="./assets/images/CSS-cheatsheet.png" alt="cheatsheet displaying CSS syntax for flexbox, grid, and more" id="css-image">
